Ensure all states of buttons have a 508 compliant color contrast ratios. #248

--- a/frontend/src/sass/core/_variables.scss
+++ b/frontend/src/sass/core/_variables.scss
@@ -12,5 +12,5 @@ $fs-brown: #2C1E13;
 $fs-dark-grey: #494440;
 $fs-orange: #e99002;
 $fs-orange-dark: #d08002;
-$fs-orange-darkest: #b76a06;
+$fs-orange-darkest: #b55e00;
 $fs-charcoal: #333
