--- a/frontend/src/sass/elements/_buttons.scss
+++ b/frontend/src/sass/elements/_buttons.scss
@@ -17,5 +17,5 @@
 
 .usa-button:active {
   background-color: $fs-orange-darkest !important;
-  color: $fs-charcoal !important;
+  color: $white !important;
 }
